extended readme file and pom file to be able to start compiled jar on windowsOS