@@ -2,5 +2,10 @@
 the code for the "Combining JavaFX11 with SpringBoot" student talk:
 (the slides)[https://docs.google.com/presentation/d/16hXscc03pJCwr5SNsfy5kQE9_MlyHHrnWfGY39nm6II/edit?usp=sharing]
 
-#Should add those:
+#### Should add those:
 `--module-path /Users/Nik/Desktop/openjfx-19_windows-x64_bin-sdk/javafx-sdk-19/lib --add-modules javafx.swing,javafx.graphics,javafx.fxml,javafx.media,javafx.controls`
+
+### On windowsOS to use the double click on jar files:
+`ftype JARFile="C:\Users\Nik\.jdks\openjdk-19\bin\javaw.exe" -jar --module-path /Users/Nik/Desktop/openjfx-19_windows-x64_bin-sdk/javafx-sdk-19/lib --add-modules javafx.swing,javafx.graphics,javafx.fxml,javafx.media,javafx.controls "%1" %*"`
+and
+`assoc .jar=JARFile`
